minor test fixes